--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
+
+.logo{
+font-family: Quicksand;
+font-size: 35px;
+}
 
