--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 .logo{
 font-family: Quicksand;
-font-size: 35px;
+font-size: 25px;
 }
 
+.slogan{
+    font-family: Poppins;
+    font-size: 15px;
+}
