--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
+@keyframes logo {
+    0% { transform: translatey(0px); }
+    50% { transform: translatey(-10px); }
+    100% { transform: translatey(0px); }
+}
+.logo {
+    font-size: 3em;
+    overflow: hidden;
+    transform: translatey(0px);
+    animation: float 3s ease-in-out infinite;
+    margin: 50px;
+}
 .logo{
 font-family: Quicksand;
 font-size: 25px;
