--- a/style.css
+++ b/style.css
@@ -1,28 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-@keyframes logo {
-    0% { transform: translatey(0px); }
-    50% { transform: translatey(-10px); }
-    100% { transform: translatey(0px); }
-}
 .logo {
- font-size: 3em;
-    overflow: hidden;
-    transform: translatey(0px);
-    animation: float 3s ease-in-out infinite;
-    margin: 50px;
+    margin-left; 50px;
+text-align: left;
     font-family: Quicksand;
-font-size: 25px;
+font-size: 15px;
 }
 
 .slogan {
+        margin-left; 50px;
+text-align: left;
     font-family: Poppins;
-    font-size: 15px;
+    font-size: 7px;
+    
 }
 
 .button-18 {
-  align-items: center;
+        margin-left; 25px;
+  align-items: left;
   background-color: #0A66C2;
   border: 0;
   border-radius: 100px;
