--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap');
 
-
+.thethingyatthetopofdaform {
+  font-family: Figtree;
+  font-size: 30px;
+}
 .logo {
     font-family: Quicksand;
 font-size: 20px;
