--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ p {
   font-size: 16px;
 }
 
+.colors {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .button-18 {
   align-items: center;
   background-color: #0A66C2;
