--- a/style.css
+++ b/style.css
@@ -9,13 +9,16 @@
 .logo {
     font-family: Quicksand;
 font-size: 20px;
-text-decoration: none;
 color: black;
 }
 
 .slogan {
     font-family: Poppins;
     font-size: 15px;
+}
+
+a {
+  text-decoration: none;
 }
 
 p {
