--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap');
 
 .thethingyatthetopofdaform {
-  font-family: Avenir Next Bold;
+  font-family: Avenir Next;
   font-size: 30px;
 }
 .logo {
-    font-family: Avenir Next Bold;
+    font-family: Avenir Next;
 font-size: 20px;
 color: black;
 }
