--- a/style.css
+++ b/style.css
@@ -1,20 +1,13 @@
-@font-face {
-    font-family: 'Avenir Next';
-    src: local('Avenir Next Bold'), local('Avenir-Next-Bold'),
-        url('AvenirNextCyr-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-  }
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap');
 
 .thethingyatthetopofdaform {
-  font-family: Avenir Next;
+  font-family: Figtree;
   font-size: 30px;
 }
 .logo {
-    font-family: Avenir Next;
+    font-family: Figtree;
 font-size: 20px;
 color: black;
 }
