--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap');
 
 .thethingyatthetopofdaform {
@@ -7,7 +7,7 @@
   font-size: 30px;
 }
 .logo {
-    font-family: Figtree;
+    font-family: Montserrat;
 font-size: 20px;
 color: black;
 }
@@ -32,7 +32,7 @@ p {
 }
 
 .colors {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Poppins;
 }
 
 .button-18 {
